syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.mars.quorus.controller.raft.grpc";
option java_outer_classname = "RaftProto";

package quorus.raft;

service RaftService {
  rpc RequestVote (VoteRequest) returns (VoteResponse) {}
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse) {}
  rpc InstallSnapshot (InstallSnapshotRequest) returns (InstallSnapshotResponse) {}
}

message VoteRequest {
  int64 term = 1;
  string candidate_id = 2;
  int64 last_log_index = 3;
  int64 last_log_term = 4;
}

message VoteResponse {
  int64 term = 1;
  bool vote_granted = 2;
}

message AppendEntriesRequest {
  int64 term = 1;
  string leader_id = 2;
  int64 prev_log_index = 3;
  int64 prev_log_term = 4;
  repeated LogEntry entries = 5;
  int64 leader_commit = 6;
}

message AppendEntriesResponse {
  int64 term = 1;
  bool success = 2;
  int64 match_index = 3; // Optimization for fast backtracking
}

message LogEntry {
  int64 term = 1;
  int64 index = 2;
  bytes data = 3; // Command payload serialized
}

// InstallSnapshot RPC (Raft ยง7): sent by leaders to bring lagging followers
// up to date when the required log entries have been compacted.
// Supports chunked transfer for large snapshots.
message InstallSnapshotRequest {
  int64 term = 1;                    // Leader's term
  string leader_id = 2;             // So follower can redirect clients
  int64 last_included_index = 3;    // Last log index included in snapshot
  int64 last_included_term = 4;     // Term of last_included_index
  int32 chunk_index = 5;            // Chunk sequence number (0-based)
  int32 total_chunks = 6;           // Total number of chunks
  bytes data = 7;                   // Raw snapshot chunk bytes
  bool done = 8;                    // true if this is the last chunk
}

message InstallSnapshotResponse {
  int64 term = 1;                    // Follower's currentTerm (for leader to update itself)
  bool success = 2;                  // true if chunk was accepted
  int32 next_chunk_index = 3;       // Next chunk the follower expects (for retries)
}
